--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sanity/client": "^3.2.0",
-    "@sanity/image-url": "^1.0.1",
-    "@stripe/stripe-js": "^1.25.0",
-    "canvas-confetti": "^1.5.1",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
-    "next-sanity-image": "^3.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hot-toast": "^2.2.0",
-    "react-icons": "^4.3.1",
-    "stripe": "^8.209.0"
+    "@sanity/client": "^5.4.0",
+    "@sanity/image-url": "^1.0.2",
+    "@stripe/stripe-js": "^1.52.0",
+    "canvas-confetti": "^1.6.0",
+    "eslint": "^8.36.0",
+    "eslint-config-next": "^13.2.4",
+    "next": "^13.2.4",
+    "next-sanity-image": "^6.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.8.0",
+    "stripe": "^11.16.0"
   }
 }
